# hypascore_localization

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/hypascore_localization/: PoseEstimationSystem.hpp
include/hypascore_localization/contractors/: Ctc3DRotation.hpp  Ctc3DStereoVO.hpp  Ctc3DTransform.hpp  CtcBoundaryLine.hpp  CtcNoCross.hpp  CtcRange.hpp  CtcRangeBearingNoCross.hpp  CtcRaster.hpp  SepPolygon.hpp
include/hypascore_localization/localization/: CMMap.hpp  GpsData.hpp  LidarData.hpp
include/hypascore_localization/localization/coarse/: CoarseLocalizer.hpp  IntervalPose.hpp
include/hypascore_localization/localization/refined/: HoughAccumulator.hpp  RefinedLocalizer.hpp
include/hypascore_localization/visual_odometry/: Frame.hpp  Landmark.hpp  Observation.hpp  VisualOdometry.hpp
launch/: hypascore_localization_0018kitti.launch  hypascore_localization_0020kitti.launch  hypascore_localization_0027_30_09kitti.launch  hypascore_localization_0027kitti.launch  hypascore_localization_0028kitti.launch  hypascore_localization_0033kitti.launch  hypascore_localization_0034_30_09kitti.launch  hypascore_localization_0034kitti.launch  hypascore_localization_0071kitti.launch  hypascore_localization_T1.launch  hypascore_localization_T1_osm.launch  hypascore_localization_T2.launch  hypascore_localization_T2_osm.launch
launch/refined_localization_only/: 0018kitti_refined_test.launch  0020kitti_refined_test.launch  0027_30_09kitti_refined_test.launch  0027kitti_refined_test.launch  0028kitti_refined_test.launch  0033kitti_refined_test.launch  0034_30_09kitti_refined_test.launch  0034kitti_refined_test.launch  0071kitti_refined_test.launch  T1_lod2_refined_test.launch  T1_osm_refined_test.launch  T2_lod2_refined_test.launch  T2_osm_refined_test.launch
src/: PoseEstimationSystem.cpp  hypascore_localization_node.cpp
src/contractors/: Ctc3DRotation.cpp  Ctc3DStereoVO.cpp  Ctc3DTransform.cpp  CtcBoundaryLine.cpp  CtcNoCross.cpp  CtcRange.cpp  CtcRangeBearingNoCross.cpp  CtcRaster.cpp  SepPolygon.cpp
src/evaluation/: gt_trajectory_dict_creator.py  map_dict_creator.py  overall_dict_creator.py  overall_evaluate.py  overall_multiple_run_evaluate.py  overall_stanford_diagram.py  read_cfg_file.py  tmp_test_pip.py  tracking_dict_creator.py  tracking_evaluate.py  visual_odom_dict_creator.py  visual_odom_evaluate.py
src/evaluation/overall_cfgs/: 0018kitti.txt  0020kitti.txt  0027_30_09kitti.txt  0027kitti.txt  0028kitti.txt  0033kitti.txt  0034_30_09kitti.txt  0034kitti.txt  0071kitti.txt  T1_lod2.txt  T1_osm.txt  T2_lod2.txt  T2_osm.txt
src/evaluation/tracker_cfgs/: 0018kitti.txt  0020kitti.txt  0027_30_09kitti.txt  0027kitti.txt  0028kitti.txt  0033kitti.txt  0034_30_09kitti.txt  0034kitti.txt  0071kitti.txt  T1_lod2.txt  T1_osm.txt  T2_lod2.txt  T2_osm.txt
src/localization/: CMMap.cpp  GpsData.cpp  LidarData.cpp
src/localization/coarse/: CoarseLocalizer.cpp  IntervalPose.cpp
src/localization/refined/: HoughAccumulator.cpp  RefinedLocalizer.cpp
src/map_tools/: gml2map_parser.py  osm2map_parser.py
src/test/: test_Ctc3DRotation.cpp  test_Ctc3DStereoVO.cpp  test_Ctc3DTransform.cpp  test_CtcBoundaryLine.cpp  test_CtcConstell.cpp  test_CtcNoCross.cpp  test_CtcRange.cpp  test_CtcRangeBearingNoCross.cpp  test_SepPolygon.cpp
src/visual_odometry/: VisualOdometry.cpp
visu/: hypascore_localization_visu.rviz
